@@ -7,6 +7,7 @@
 	search for verbose output.
 	(PokerChildrenTestCase.test07_child_force_windows_system): Wrote
 	method.
+	(PokerChildrenTestCase.test08_brokenKill): Wrote method.
 
 2008-06-14  Bradley M. Kuhn  <bkuhn@ebb.org>
 
